crates/swc/tests/tsc-references/classExtendsItselfIndirectly2_es5.1.normal.js
import * as swcHelpers from "@swc/helpers";
var C = /*#__PURE__*/ function(_E) {
    "use strict";
    swcHelpers.inherits(C, _E);
    var _super = swcHelpers.createSuper(C);
    function C() {
        swcHelpers.classCallCheck(this, C);
        return _super.apply(this, arguments);
    }
    return C;
} // error
(N.E);
var M;
(function(M1) {
    var D = /*#__PURE__*/ function(C) {
        "use strict";
        swcHelpers.inherits(D, C);
        var _super = swcHelpers.createSuper(D);
        function D() {
            swcHelpers.classCallCheck(this, D);
            return _super.apply(this, arguments);
        }
        return D;
    }(C);
    M1.D = D;
})(M || (M = {}));
var _$N;
(function(N) {
    var E = /*#__PURE__*/ function(_D) {
        "use strict";
        swcHelpers.inherits(E, _D);
        var _super = swcHelpers.createSuper(E);
        function E() {
            swcHelpers.classCallCheck(this, E);
            return _super.apply(this, arguments);
        }
        return E;
    }(M.D);
    N.E = E;
})(_$N || (_$N = {}));
var O;
(function(O) {
    var C2 = /*#__PURE__*/ function(_E2) {
        "use strict";
        swcHelpers.inherits(C2, _E2);
        var _super = swcHelpers.createSuper(C2);
        function C2() {
            swcHelpers.classCallCheck(this, C2);
            return _super.apply(this, arguments);
        }
        return C2;
    } // error
    (Q.E2);
    var P1;
    (function(P) {
        var D2 = /*#__PURE__*/ function(C2) {
            "use strict";
            swcHelpers.inherits(D2, C2);
            var _super = swcHelpers.createSuper(D2);
            function D2() {
                swcHelpers.classCallCheck(this, D2);
                return _super.apply(this, arguments);
            }
            return D2;
        }(C2);
        P.D2 = D2;
    })(P1 || (P1 = {}));
    var _$Q;
    (function(Q) {
        var E2 = /*#__PURE__*/ function(_D2) {
            "use strict";
            swcHelpers.inherits(E2, _D2);
            var _super = swcHelpers.createSuper(E2);
            function E2() {
                swcHelpers.classCallCheck(this, E2);
                return _super.apply(this, arguments);
            }
            return E2;
        }(P1.D2);
        Q.E2 = E2;
    })(_$Q || (_$Q = {}));
})(O || (O = {}));
